src/test/deca/syntax/valid/variables/affectation.deca
// Description:
//    Tests a valid program with an affectation.
//
// Results:
//
//
// History:
//    created on 17/12/2024

{
        int a = 1;
}